# rplife

./: .pre-commit-config.yaml  .pylintrc  README.md  __main__.py  grid.py  key.txt  patterns.py  patterns.toml  pyproject.toml  requirements.txt  run.py  test_rplife.py
.github/workflows/: main.yml  pylint.yml  python-app.yml
rplife/: __init__.py  __main__.py  cli.py  grid.py  patterns.py  patterns.toml  run.py  views.py
