[project]
name = "rplife"
version = "0.1.0"
description = "Game of Life"
authors = [
    {name = "hurley08", email = "intriqet@gmail.com"},
]
dependencies = [
    "pylint",
    "pytest",
    "pylint-pytest",
    "coverage",
    "pre-commit",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"
